--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "云游君 <me@yunyoujun.cn>",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js",
+    "2json": "node index.js",
+    "2txt": "node index2txt.js",
     "to:1diary": "node lib/1diary.js",
     "import": "node src/import.js"
   },
